@@ -1,9 +1,9 @@
+#include "libepc/consumer.h"
 #include "libepc/publisher.h"
 
-#include <gtk/gtk.h>
 #include <avahi-ui/avahi-ui.h>
-#include <libsoup/soup-message.h>
-#include <libsoup/soup-session-sync.h>
+#include <glib/gi18n.h>
+#include <gtk/gtk.h>
 
 static void
 show_error (const char *message, ...)
@@ -25,21 +25,37 @@ show_error (const char *message, ...)
 }
 
 static void
-show_response (SoupMessage *message)
+show_value (const gchar *publisher,
+            const gchar *key,
+            const gchar *value,
+            gsize        length)
 {
   GtkTextBuffer *buffer;
+
   GtkWidget *text_view;
   GtkWidget *scroller;
   GtkWidget *dialog;
+  GtkWidget *label;
 
-  dialog = gtk_dialog_new_with_buttons ("Glom Configuration", NULL,
+  gchar *markup;
+
+  dialog = gtk_dialog_new_with_buttons ("Published Value", NULL,
                                         GTK_DIALOG_NO_SEPARATOR,
                                         GTK_STOCK_CLOSE, GTK_RESPONSE_CLOSE,
                                         NULL);
 
+  markup = g_markup_printf_escaped (
+    "Value stored for <b>%s</b> at <b>%s</b> (%d %s):",
+    key, publisher, length, ngettext ("byte", "bytes", length));
+
+  label = gtk_label_new (NULL);
+  gtk_label_set_markup (GTK_LABEL (label), markup);
+  gtk_misc_set_padding (GTK_MISC (label), 6, 6);
+  gtk_widget_show (label);
+  g_free (markup);
+
   buffer = gtk_text_buffer_new (NULL);
-  gtk_text_buffer_set_text (buffer, message->response.body,
-                                    message->response.length);
+  gtk_text_buffer_set_text (buffer, value, length);
 
   text_view = gtk_text_view_new_with_buffer (buffer);
 
@@ -53,6 +69,8 @@ show_response (SoupMessage *message)
   gtk_widget_show_all (scroller);
 
   gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox),
+                      label, FALSE, TRUE, 0);
+  gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox),
                       scroller, TRUE, TRUE, 0);
 
   gtk_window_set_default_size (GTK_WINDOW (dialog), 500, 350);
@@ -60,56 +78,40 @@ show_response (SoupMessage *message)
   gtk_widget_destroy (dialog);
 }
 
-static SoupMessage*
-build_document_request (const char *host,
-                        int         port,
-                        const char *path)
-{
-  SoupMessage *msg;
-  char *uri;
-
-  g_return_val_if_fail (port > 0 && port < 65536, NULL);
-  g_return_val_if_fail (NULL != host, NULL);
-  g_return_val_if_fail (NULL != path, NULL);
-
-  if (NULL == path)
-    path = "/";
-
-  g_return_val_if_fail ('/' == path[0], NULL);
-
-  uri = g_strdup_printf ("http://%s:%d/%s", host, port, path + 1);
-  msg = soup_message_new ("GET", uri);
-
-  g_free (uri);
-
-  return msg;
-}
-
 static void
-authenticate_cb (SoupSession  *session G_GNUC_UNUSED,
-                 SoupMessage  *message G_GNUC_UNUSED,
-                 gchar        *auth_type G_GNUC_UNUSED,
-                 gchar        *auth_realm G_GNUC_UNUSED,
-                 gchar       **username,
-                 gchar       **password,
-                 gpointer      data G_GNUC_UNUSED)
+lookup_value (EpcConsumer *consumer,
+              const gchar *key,
+              const gchar *publisher)
 {
-  *username = g_strdup (g_get_user_name ());
-  *password = g_strdup ("yadda");
+  gchar *value;
+  gsize length;
+
+  value = epc_consumer_lookup (consumer, key, &length);
+
+  if (value)
+    show_value (publisher, key, value, length);
+  else
+    show_error ("<b>Value not found.</b>\n\n"
+                "No value found for key <b>%s</b> at <b>%s</b>.",
+                key, publisher);
+
+  g_free (value);
 }
 
 int
 main (int   argc,
       char *argv[])
 {
+  EpcConsumer *consumer = NULL;
+  gchar *publisher = NULL;
   GtkWidget *dialog;
+  int i;
 
   g_thread_init (NULL);
   gdk_threads_init ();
   gtk_init (&argc, &argv);
 
-  dialog = aui_service_dialog_new ("Choose an Easy Publish and Commit Service",
-				   NULL,
+  dialog = aui_service_dialog_new ("Choose an Easy Publish and Consume Service", NULL,
                                    GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
                                    GTK_STOCK_CONNECT, GTK_RESPONSE_ACCEPT,
                                    NULL);
@@ -120,34 +122,26 @@ main (int   argc,
 
   if (GTK_RESPONSE_ACCEPT == gtk_dialog_run (GTK_DIALOG (dialog)))
     {
-      SoupSession *session;
-      SoupMessage *request;
-      guint status;
-
-      session = soup_session_sync_new ();
-
-      g_signal_connect (session, "authenticate",
-                        G_CALLBACK (authenticate_cb), NULL);
-
-      request = build_document_request (
-        aui_service_dialog_get_host_name (AUI_SERVICE_DIALOG (dialog)),
-        aui_service_dialog_get_port (AUI_SERVICE_DIALOG (dialog)),
-        "/get/source-code");
-
-      status = soup_session_send_message (session, request);
-
-      if (SOUP_STATUS_OK == status)
-        show_response (request);
-      else
-        show_error ("<b>Cannot retreive configuration file:</b>\n\n"
-                    "Server response was `%s' (%d).",
-                    soup_status_get_phrase (status), status);
-
-      g_object_unref (request);
-      g_object_unref (session);
+      const gint port = aui_service_dialog_get_port (AUI_SERVICE_DIALOG (dialog));
+      const gchar *host = aui_service_dialog_get_host_name (AUI_SERVICE_DIALOG (dialog));
+      publisher = g_strdup (aui_service_dialog_get_service_name (AUI_SERVICE_DIALOG (dialog)));
+      consumer = epc_consumer_new (host, port);
     }
 
   gtk_widget_destroy (dialog);
+
+  if (consumer)
+    {
+      if (argc > 1)
+        for (i = 1; i < argc; ++i)
+          lookup_value (consumer, argv[i], publisher);
+      else
+        lookup_value (consumer, "source-code", publisher);
+
+      g_object_unref (consumer);
+    }
+
+  g_free (publisher);
 
   return 0;
 }
